# FFmpegInAndroid

./: README.md
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/xmu/lxq/hello/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/xmu/lxq/hello/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/test/java/com/xmu/lxq/hello/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
